add_executable(wumpus_experiment wumpus.cpp)
target_link_libraries(wumpus_experiment mcvi_library)

add_executable(wumpus_timeseries wumpus_time_series.cpp)
target_link_libraries(wumpus_timeseries mcvi_library)

add_executable(wumpus_to_sarsop wumpus_to_sarsop.cpp)
target_link_libraries(wumpus_to_sarsop mcvi_library)
